# homebrew-cdn-m1-server

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  AUP.md  Dockerfile  LEGAL.md  LICENSE  README.md  TAKEDOWN.md  docker-compose.yml  entrypoint.sh  generate-index.py  pyproject.toml
configs/: settings.env
docker/: entrypoint.sh
docker/app/: init_db.sql  template.json
docker/nginx/: common.locations.conf  nginx.template.conf
example/: .env  docker-compose.yml  nginx.conf  settings.env
init/: json_template.json  settings.ini  store_db.sql
scripts/: auto_indexer.py  auto_mover.py  auto_renamer.py  log_utils.py  settings.py  watcher.py
scripts/tools/: pkgtool.py  (+1 more)
src/: __init__.py  __main__.py  demo_logs.py  main.py  settings.py
tests/: conftest.py  test_app.py  test_auto_formatter.py  test_auto_indexer.py  test_auto_sorter.py  test_coverage_extra.py  test_export_outputs.py  test_exporters.py  test_hb_store_api.py  test_helpers_pkgtool.py  test_helpers_store_assets_client.py  test_ingest_package.py  test_main_entrypoint.py  test_modules_auto_organizer.py  test_modules_http_api.py  test_modules_watcher.py  test_orbispatches_gateway.py  test_pkgtool_gateway.py  test_pkgtool_text_normalizer.py  test_reconcile_catalog.py  test_settings_loader.py  test_settings_snapshot_repository.py  test_utils_cache_utils.py  test_utils_db_utils.py  test_utils_file_utils.py  test_utils_fpkgi_utils.py  test_utils_init_utils.py  test_utils_log_utils.py  test_utils_pkg_utils.py  test_utils_url_utils.py  test_watcher_executor.py  test_watcher_planner.py
(+110 files in other folders)
