[project]
name = "hb-store-m1"
version = "0.2.3"
requires-python = ">=3.12"
dependencies = [
    "PyGithub",
    "pydantic",
    "pytest",
    "pytest-cov",
    "tabulate"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hb_store_m1*"]
