[project]
name = "homebrew-cdn-m1-server"
version = "0.3.1"
license = {text = "GNU General Public License v3.0"}
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10,<4",
    "filelock>=3.16,<4",
    "PyGithub>=2.0",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["homebrew_cdn_m1_server*"]
